# clib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
clib/: CMakeLists.txt
clib/include/gismo359/: array.h  common.h  file.h  string.h
clib/src/gismo359/: array.c  file.c  string.c
